// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`open-issues creates an issue 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Jason!",
  },
]
`;

exports[`open-issues creates an issue adds an array of labels 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "one",
      "two",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Jason!",
  },
]
`;

exports[`open-issues creates an issue and assigns the configured user 1`] = `
Array [
  Object {
    "assignee": "matchai",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been automagically assigned to @matchai.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Jason!",
  },
]
`;

exports[`open-issues creates an issue and assigns the configured users 1`] = `
Array [
  Object {
    "assignees": Array [
      "JasonEtco",
      "matchai",
      "defunkt",
    ],
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been automagically assigned to @JasonEtco, @matchai and @defunkt.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Jason!",
  },
]
`;

exports[`open-issues creates an issue that has special characters 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/special.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Mention @someone, ask a question?\\",\\"file\\":\\"special.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Mention @someone, ask a question?",
  },
]
`;

exports[`open-issues creates an issue with a truncated title 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/long-title.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"This is a full, very long title. Just trust me that this is a very, very long, long title that contains way more information than it should\\",\\"file\\":\\"long-title.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "This is a full, very long title. Just trust me that this is a very, very long, l...",
  },
]
`;

exports[`open-issues creates an issue with multiple keywords 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Jason!",
  },
]
`;

exports[`open-issues creates an issue without assigning anyone 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Jason!",
  },
]
`;

exports[`open-issues creates multiple issues with multiple keywords 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/multiple-keywords.js#L1-L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Testing!\\",\\"file\\":\\"multiple-keywords.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Testing!",
  },
]
`;

exports[`open-issues creates multiple issues with multiple keywords 2`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/multiple-keywords.js#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO: \` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"TODO: Hello!\\",\\"file\\":\\"multiple-keywords.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "TODO: Hello!",
  },
]
`;

exports[`open-issues parses titles and respects case-insensitive 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/caseinsensitive.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"My keyword is case insensitive!\\",\\"file\\":\\"caseinsensitive.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "My keyword is case insensitive!",
  },
]
`;
